Fix homepage and deploy script

--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "tw-animate-css": "^1.3.7",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://danielwanrosli.github.io",
+  "homepage": "https://danielwanrosli.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
